# TeslaMate-Telegram-Bot

./: .gitignore  .markdownlint.yaml  .pylintrc  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  secretspec.toml  treefmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: buildx.yml  check_paths.yml  devops.yml  ensure_linting.yml  python_linting.yml  python_linting_quick.yml  spell_check.yml
nix/: module.nix
nix/flake-modules/: devenv.nix  formatter.nix  package.nix
src/: check_for_tesla_update_and_send_telegram.sh  mqtt_config.py  requirements.txt  telegram_config.py  teslamate_telegram_bot.py  teslamte_telegram_bot.py
